# OrganisingFiles_by_Type

./: README.md  pyproject.toml
src/: gui.py
src/OrganisingFiles_by_Type.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/file_organiser/: file_info_dictionary.py  gui.py  main.py  utils.py
